# WikipediaGraphSearch

./: .dockerignore  .gitignore  CMakeLists.txt  DEPENDENCIES.txt  Dockerfile  FUTURE-WORK.txt  LICENSE.txt  Makefile  PKGBUILD  README.txt  common.h  graph-file-format.txt  graph-header.h  graph-reader.cc  graph-reader.h  graph-writer.cc  graph-writer.h  indexer.cc  inspect.cc  metadata-reader.cc  metadata-reader.h  metadata-writer.cc  metadata-writer.h  parser.cc  parser.h  pipe-trick.cc  pipe-trick.h  pipe-trick_test.cc  reader.cc  reader.h  search.cc  searcher.cc  searcher.h  websearch.cc  websearch.service  websearch.sh  xml-stats.cc
apps/: CMakeLists.txt  index.cc  indexer.cc  inspect.cc  search.cc  websearch.cc  xml-stats.cc
data/: .gitignore  README.txt
docs/: graph-file-format.txt  http-server-api.txt
htdocs/: app.js  index.html  style.css
include/wikipath/: annotated-dag.h  common.h  graph-header.h  graph-reader.h  graph-writer.h  metadata-reader.h  metadata-writer.h  parser.h  pipe-trick.h  random.h  reader-c-api.h  reader.h  searcher.h
makepkg/: PKGBUILD
python/: CMakeLists.txt  graph-inspect.py  graph-search.py  http-server.py  http_server.py  inspect.py  search.py  wikipath-c-api.py
src/: CMakeLists.txt  annotated-dag.cc  graph-reader.cc  graph-writer.cc  metadata-reader.cc  metadata-writer.cc  parser.cc  pipe-trick.cc  python-module.cc  random.cc  reader-c-api.cc  reader.cc  searcher.cc
systemd/: CMakeLists.txt  websearch-python.service  websearch-python.sh  websearch-wt.service  websearch-wt.sh
testdata/: example-1.graph  example-1.xml  example-2.graph  example-2.metadata  example-2.xml  example-3.graph  example-3.metadata  example-3.xml  example.graph  example.metadata  example.txt  example.xml
tests/: CMakeLists.txt  pipe-trick_test.cc  python_http_server_test.py  python_wikipath_test.py
